# storybook-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  USAGE.md  package.json  publish.sh  vite.config.js
.storybook/: README.md  main.js  preview.js
crates/storybook/: Cargo.toml
crates/storybook-derive/: Cargo.toml
crates/storybook-derive/src/: lib.rs
crates/storybook/src/: lib.rs
example/: Cargo.toml
example/src/: lib.rs
storybook/: index.html
storybook-core/: Cargo.toml
storybook-core/src/: lib.rs
storybook-derive/: Cargo.toml
storybook-derive/src/: lib.rs
storybook/stories/: Introduction.mdx
