[workspace]
members = [
    "storybook-derive",
    "storybook-core",
    "example"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = []

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
linkme = "0.3"
wasm-bindgen = "0.2"
dominator = "0.5"
futures-signals = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["HtmlElement", "Document", "Window", "Element", "console", "HtmlInputElement"] }
