[workspace]
members = [
    "crates/storybook-derive",
    "crates/storybook",
    "example"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Bridging tool for Rust WASM components to Storybook"
authors = ["Flora Hill"]

[workspace.dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
wasm-bindgen = "0.2"
dominator = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
once_cell = "1.20"
web-sys = { version = "0.3", features = ["HtmlElement", "Document", "Window", "Element", "console", "HtmlInputElement"] }
