[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
storybook-core = { path = "../storybook-core" }
storybook-derive = { path = "../storybook-derive" }
wasm-bindgen.workspace = true
dominator.workspace = true
futures-signals.workspace = true
web-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
linkme.workspace = true
