[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
storybook = { path = "../storybook-core", version = "0.1.0" }
storybook-derive = { path = "../storybook-derive", version = "0.1.0" }
wasm-bindgen.workspace = true
dominator.workspace = true
futures-signals.workspace = true
web-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
