[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
storybook = { path = "../crates/storybook", version = "0.2.1" }
wasm-bindgen.workspace = true
dominator.workspace = true
web-sys.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
futures-signals = "0.3"
